# books-api

./: .gitignore  README.md  app.py  log_conf.yaml  pyproject.toml  requirements.txt
config/: auth_config.py  database_config.py  logger_config.py
docs/: architecture_plan.md  arquitecture_design.md  challenge.md  machine_learning_usage.md
dto/: BookSearchResponse.py  LoginResponse.py  RefreshResponse.py  RegisterUser.py  ResultsResponse.py  StatsResponse.py
handler/: auth_handler.py  books_handler.py  categories_handler.py  jobs_handler.py  stats_handler.py
middleware/: TokenMiddleware.py
models/: Book.py  User.py
repository/: Repository.py  books_respository.py  users_repository.py
services/: books_service.py  scrapping_service.py  users_service.py  write_service.py
