[tool.poetry]
name = "books-api-tech-challenge"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"



[tool.poetry.dependencies]
python = ">=3.12"
beautifulsoup4 = ">=4.13.4,<5.0.0"
requests = ">=2.32.4,<3.0.0"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
pyyaml = "^6.0.2"
httpx = "^0.28.1"
sqlmodel = "^0.0.24"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
